[package]
name = "midnight-node-runtime"
version = "0.2.3"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
edition = "2024"
license-file.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log.workspace = true
parity-scale-codec.workspace = true
scale-info.workspace = true

binary-merkle-tree.workspace = true
frame-support.workspace = true
frame-system.workspace = true
frame-try-runtime = { workspace = true, optional = true }
frame-executive.workspace = true
pallet-aura.workspace = true
pallet-beefy.workspace = true
pallet-beefy-mmr.workspace = true
pallet-grandpa.workspace = true
pallet-preimage.workspace = true
pallet-mmr.workspace = true
pallet-scheduler.workspace = true
pallet-timestamp.workspace = true
pallet-tx-pause.workspace = true
pallet-migrations.workspace = true
pallet-membership.workspace = true
pallet-collective.workspace = true
pallet-federated-authority.workspace = true
sp-api.workspace = true
sp-block-builder.workspace = true
sp-consensus-aura.workspace = true
sp-consensus-beefy.workspace = true
sp-consensus-grandpa.workspace = true
sp-consensus-slots.workspace = true
sp-core.workspace = true
sp-genesis-builder.workspace = true
sp-inherents.workspace = true
sp-partner-chains-bridge.workspace = true
sp-offchain.workspace = true
sp-runtime.workspace = true
sp-session.workspace = true
sp-staking.workspace = true
sp-transaction-pool.workspace = true
sp-version.workspace = true
sp-storage.workspace = true

# Sidechains primitives
sp-session-validator-management = { workspace = true, features = ["serde"] }
sp-sidechain.workspace = true

# Used for the node template's RPCs
frame-system-rpc-runtime-api.workspace = true

# Used for runtime benchmarking
frame-benchmarking = { workspace = true, optional = true }
frame-system-benchmarking = { workspace = true, optional = true }

# Sidechain Dependencies
authority-selection-inherents.workspace = true
#pallet-block-rewards.workspace = true
#sp-block-rewards.workspace = true
pallet-partner-chains-bridge.workspace = true
pallet-sidechain.workspace = true
pallet-session.workspace = true
pallet-session-validator-management.workspace = true
pallet-partner-chains-session.workspace = true
sidechain-domain = { workspace = true, features = ["serde"] }
sidechain-slots.workspace = true

# Midnight Dependencies
midnight-node-ledger.workspace = true
pallet-midnight.workspace = true
pallet-midnight-system.workspace = true
pallet-system-parameters.workspace = true
pallet-throttle.workspace = true
pallet-version.workspace = true
midnight-primitives-beefy.workspace = true
midnight-primitives-federated-authority-observation.workspace = true
pallet-cnight-observation.workspace = true
midnight-primitives-cnight-observation.workspace = true
midnight-primitives.workspace = true
pallet-federated-authority-observation.workspace = true
runtime-common.workspace = true

[dev-dependencies]
sp-io.workspace = true
sp-consensus-slots.workspace = true
plutus.workspace = true
serde.workspace = true

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true, default-features = true }
frame-storage-access-test-runtime = { workspace = true, optional = true, default-features = true }

[features]
default = ["std"]
std = [
    "binary-merkle-tree/std",
    "authority-selection-inherents/std",
    "frame-try-runtime?/std",
    "frame-system-benchmarking?/std",
    "frame-benchmarking/std",
    "parity-scale-codec/std",
    "frame-executive/std",
    "frame-support/std",
    "frame-system-rpc-runtime-api/std",
    "frame-system/std",
    "frame-try-runtime/std",
    "pallet-aura/std",
    "pallet-beefy/std",
    "pallet-beefy-mmr/std",
    "pallet-grandpa/std",
    "pallet-midnight/std",
    "pallet-system-parameters/std",
    "pallet-throttle/std",
    "pallet-mmr/std",
    "pallet-partner-chains-bridge/std",
    "pallet-version/std",
    "pallet-cnight-observation/std",
    "pallet-federated-authority-observation/std",
    "pallet-preimage/std",
    "pallet-scheduler/std",
    "pallet-timestamp/std",
    "pallet-migrations/std",
    "pallet-membership/std",
    "pallet-collective/std",
    "pallet-federated-authority/std",
    "sp-api/std",
    "sp-block-builder/std",
    #"sp-block-rewards/std",
    "sp-consensus-aura/std",
    "sp-consensus-beefy/std",
    "sp-consensus-grandpa/std",
    "sp-consensus-slots/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-partner-chains-bridge/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-session-validator-management/std",
    "sp-sidechain/std",
    "sp-staking/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "sp-storage/std",
    "sp-genesis-builder/std",
    "substrate-wasm-builder",
    "frame-storage-access-test-runtime",
    #"pallet-block-rewards/std",
    "pallet-sidechain/std",
    "pallet-session/std",
    "pallet-session-validator-management/std",
    "pallet-partner-chains-session/std",
    "pallet-tx-pause/std",
    "sidechain-domain/std",
    "sidechain-slots/std",
    "sp-io/std",
    "midnight-primitives/std",
    "midnight-primitives-beefy/std",
    "midnight-primitives-cnight-observation/std",
    "runtime-common/std"
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-beefy-mmr/runtime-benchmarks",
    "pallet-grandpa/runtime-benchmarks",
    "pallet-midnight/runtime-benchmarks",
    # TODO: Enable native-token-mgmt benchmarks when available
    # "pallet-partner-chains-bridge/runtime-benchmarks",
    "pallet-scheduler/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "pallet-tx-pause/runtime-benchmarks",
    "pallet-migrations/runtime-benchmarks",
    "pallet-membership/runtime-benchmarks",
    "pallet-collective/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "pallet-federated-authority/runtime-benchmarks",
    "pallet-federated-authority-observation/runtime-benchmarks",
    "pallet-system-parameters/runtime-benchmarks",
    "pallet-session-validator-management/runtime-benchmarks",
]
try-runtime = [
    "frame-try-runtime/try-runtime",
    "frame-executive/try-runtime",
    "frame-system/try-runtime",
    "frame-support/try-runtime",
    "pallet-aura/try-runtime",
    "pallet-beefy/try-runtime",
    "pallet-beefy-mmr/try-runtime",
    "pallet-grandpa/try-runtime",
    "pallet-midnight/try-runtime",
    # TODO: Enable native token mgmt try runtime feature when available
    # "pallet-partner-chains-bridge/try-runtime",
    "pallet-mmr/try-runtime",
    "pallet-scheduler/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-tx-pause/try-runtime",
    "pallet-migrations/try-runtime",
    "pallet-membership/try-runtime",
    "pallet-collective/try-runtime",
    "pallet-throttle/try-runtime",
]
experimental = []

[package.metadata.cargo-shear]
ignored = ["serde", "frame-storage-access-test-runtime"]
