[package]
name = "midnight-node-ledger-helpers"
version = "0.1.0"
edition = "2024"
license-file.workspace = true

[dependencies]
hex.workspace = true

mn-ledger = { workspace = true, features = ["proving", "test-utilities"] }
base-crypto = { workspace = true }
coin-structure = { workspace = true }
onchain-runtime = { workspace = true }
midnight-serialize = { workspace = true }
ledger-storage = { workspace = true }
transient-crypto = { workspace = true }
zswap = { workspace = true }
zkir = { workspace = true }

mn-ledger-8 = { workspace = true, features = ["proving", "test-utilities"] }
onchain-runtime-ledger-8 = { workspace = true }
ledger-storage-ledger-8 = { workspace = true }
zswap-ledger-8 = { workspace = true }

mn-ledger-9 = { workspace = true, features = ["proving", "test-utilities"] }
onchain-runtime-ledger-9 = { workspace = true }
zswap-ledger-9 = { workspace = true }

rand = { version = "0.8.4", features = ["small_rng", "getrandom"] }
rayon.workspace = true
log.workspace = true
lazy_static.workspace = true
itertools = { workspace = true, features = ["use_alloc"] }
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
bip32.workspace = true
derive-where.workspace = true
serde = { workspace = true, features = ["derive"] }
bech32 = "0.11.0"
bip39 = "2.2.2"
toml.workspace = true
subxt.workspace = true
subxt-signer.workspace = true
serde_json.workspace = true
serde_bytes = "0.11"
zeroize = { workspace = true }

[features]
default = []
can-panic = []
erase-proof = []
test-utils = []
fixed-point-custom-serde = ["mn-ledger/fixed-point-custom-serde", "mn-ledger-8/fixed-point-custom-serde", "mn-ledger-9/fixed-point-custom-serde"]
