[package]
name = "pallet-consensus-engine"
version = "0.1.0"
edition = "2024"
description = "Pallet tracking the consensus-engine transition state machine"
license-file.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }
frame-support.workspace = true
frame-system.workspace = true
log.workspace = true
pallet-aura.workspace = true
pallet-babe.workspace = true
sp-consensus-aura.workspace = true
sp-consensus-babe.workspace = true
sp-consensus-slots.workspace = true
midnight-primitives-consensus-engine.workspace = true

[dev-dependencies]
pallet-timestamp.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-aura/std",
    "pallet-babe/std",
    "scale-info/std",
    "sp-consensus-aura/std",
    "sp-consensus-babe/std",
    "sp-consensus-slots/std",
    "midnight-primitives-consensus-engine/std",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "pallet-aura/try-runtime",
    "pallet-babe/try-runtime",
]

[package.metadata.cargo-shear]
ignored = ["scale-info"]
