[package]
name = "pallet-throttle"
version = "0.1.0"
edition = "2024"
description = "Minimal pallet providing storage for signed transaction throttling"
license-file.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }
frame-support.workspace = true
frame-system.workspace = true
sp-runtime.workspace = true

[dev-dependencies]
sp-core.workspace = true
sp-io.workspace = true

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "sp-runtime/std",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]

[package.metadata.cargo-shear]
ignored = ["scale-info"]
