[package]
name = "fetch-utxo-ordering"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
subxt = "0.44"
tokio = { version = "1", features = ["full"] }
parity-scale-codec = { version = "3", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
