[package]
name = "midnight-node-e2e"
version = "0.1.0"
edition = "2021"
publish = false
autotests = false

[features]
local = []
local-dev = []
local-ci = []
qanet = []
default = ["local-ci"]

[dependencies]
aiken-contracts-lib = { path = "../../util/aiken-contracts-lib" }
hex.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
whisky.workspace = true
tiny-bip39 = "2.0.0"
ogmios-client = { path = "../../partner-chains/toolkit/utils/ogmios-client" }
serde.workspace = true
serde_json.workspace = true
rand = "0.9.2"
subxt.workspace = true
midnight-node-metadata.workspace = true
midnight-node-ledger-helpers = { workspace = true, features = ["can-panic"] }
blake2 = "0.10.6"

[dev-dependencies]
midnight-node-res = { workspace = true, features = ["test"] }
midnight-node-toolkit = { path = "../../util/toolkit" }

[[test]]
name = "e2e_tests"
path = "tests/lib.rs"
test = false
harness = true
