# This file is part of midnight-node.
# Copyright (C) Midnight Foundation
# SPDX-License-Identifier: Apache-2.0
# Licensed under the Apache License, Version 2.0 (the "License");
# You may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "aiken-contracts-lib"
version = "0.1.0"
edition = "2021"
description = "Library for deploying Aiken governance contracts to Cardano"
license = "Apache-2.0"
publish = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
hex.workspace = true
thiserror.workspace = true
whisky = { git = "https://github.com/rsporny/whisky", branch = "wasm-bindgen-update" }
ogmios-client = { git = "https://github.com/input-output-hk/partner-chains", tag = "v1.8.1" }
