# This file is part of midnight-node.
# Copyright (C) Midnight Foundation
# SPDX-License-Identifier: Apache-2.0
# Licensed under the Apache License, Version 2.0 (the "License");
# You may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "aiken-deployer"
version = "0.1.0"
edition = "2021"
description = "CLI tool for deploying Aiken governance contracts to Cardano"
license = "Apache-2.0"
publish = false

[[bin]]
name = "aiken-deployer"
path = "src/main.rs"

[dependencies]
aiken-contracts-lib = { path = "../aiken-contracts-lib" }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serde_json.workspace = true
hex.workspace = true
thiserror.workspace = true
whisky = { git = "https://github.com/rsporny/whisky", branch = "wasm-bindgen-update" }
ogmios-client = { git = "https://github.com/input-output-hk/partner-chains", tag = "v1.8.1" }
