[package]
name = "midnight-node-toolkit"
version = "0.1.0"
edition = "2024"
license-file.workspace = true

[[bin]]
name = "midnight-node-toolkit"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
hardfork-test = []
hardfork-test-rollback = []
erase-proof = ["midnight-node-ledger-helpers/erase-proof"]

[dependencies]
midnight-node-ledger-helpers = { workspace = true, features = ["can-panic", "test-utils", "fixed-point-custom-serde"] }
midnight-node-metadata.workspace = true
midnight-primitives-ics-observation = { workspace = true, default-features = true }
midnight-primitives-reserve-observation = { workspace = true, default-features = true }
subxt.workspace = true
tokio.workspace = true
hex = { workspace = true, features = ["std", "serde"] }
sha2.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
rand.workspace = true
thiserror.workspace = true
clap = { workspace = true, features = ["env", "derive"] }
futures.workspace = true
indicatif = "0.17.8"
console = "0.15.8"
backoff = { version = "0.4.0", features = ["tokio"] }
log = { workspace = true, features = ["kv"] }
structured-logger = "1.0.3"
async-trait = "0.1.87"
toml.workspace = true
tracing = "0.1"
tracing-subscriber = "0.3"
tempfile.workspace = true
parity-scale-codec = { workspace = true }
sp-crypto-hashing.workspace = true
subxt-signer.workspace = true
async-channel = "2.5.0"
num_cpus = "1.17.0"
redb = "3.1.0"
bson = { version = "3.1.0", features = ["serde"] }
sqlx = { workspace = true, features = ["runtime-tokio", "postgres"] }
zstd = "0.13"
strum.workspace = true

[dev-dependencies]
test-case = "3.3.1"
hex-literal.workspace = true
trycmd = "0.15.10"
testcontainers = "0.25"
serde_yaml = "0.9"
shellexpand = "3"

[lints]
workspace = true
