[package]
name = "sp-block-production-log"
version.workspace = true
license = "Apache-2.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
parity-scale-codec = { workspace = true }
sp-api = { workspace = true }
sp-inherents = { workspace = true }
sp-runtime = { workspace = true }
thiserror = { workspace = true }
sidechain-slots = { workspace = true }

[features]
default = ["std"]
std = [
	"sp-runtime/std",
	"parity-scale-codec/std",
	"sp-inherents/std",
	"sp-runtime/std",
	"sp-api/std",
	"sidechain-slots/std"
]

[lib]
doctest = false
