[package]
name = "sp-partner-chains-consensus"
version = "1.8.1"
description = "Partner Chains consensus primitives"
authors.workspace = true
homepage.workspace = true
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[dependencies]
sp-inherents = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }

[lib]
doctest = false
