[package]
name = "partner-chains-db-sync-data-sources"
version = "1.8.1"
license = "Apache-2.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Db-Sync-based implementations of all data sources used by Partner Chains components"

[lints]
workspace = true

[dependencies]
sqlx = { workspace = true }
db-sync-sqlx = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
chrono = "0.4.31"
hex = { workspace = true }
hex-literal = { workspace = true }
itertools = { workspace = true, features = ["use_std"] }
sidechain-domain = { workspace = true, features = ["std", "serde"] }
serde = { workspace = true }
bigdecimal = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
figment = { workspace = true }
substrate-prometheus-endpoint = { workspace = true }
derive-new = { workspace = true }
lru = { workspace = true }
sp-timestamp = { workspace = true, features = ["std"] }
time-source = { workspace = true, features = ["mock"] }
sidechain-mc-hash = { workspace = true, optional = true }
pallet-sidechain-rpc = { workspace = true, optional = true }
authority-selection-inherents = { workspace = true, features = [
    "std",
], optional = true }
cardano-serialization-lib = { workspace = true }
partner-chains-plutus-data = { workspace = true }
sp-partner-chains-bridge = { workspace = true, optional = true, features = ["std"] }

[dev-dependencies]
tokio-test = "0.4.3"
ctor = "0.5.0"
testcontainers-modules = { version = "0.15", features = ["blocking", "postgres"] }
pretty_assertions = { workspace = true }

[features]
default = []
block-source = ["sidechain-mc-hash"]
candidate-source = ["authority-selection-inherents"]
mc-hash = ["sidechain-mc-hash", "block-source"]
sidechain-rpc = ["pallet-sidechain-rpc", "block-source"]
bridge = ["sp-partner-chains-bridge"]
