[package]
name = "pallet-sidechain-rpc"
version.workspace = true
license = "Apache-2.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
jsonrpsee = { workspace = true }
serde = { workspace = true }
sp-core = { workspace = true, features = ['std'] }
sp-runtime = { workspace = true, features = ['std'] }
sp-api = { workspace = true, features = ['std'] }
sp-blockchain = { workspace = true }
sp-sidechain = { workspace = true, features = ['std'] }
sidechain-domain = { workspace = true, features = ['std'] }
sidechain-slots = { workspace = true, features = ['std', 'serde'] }
tokio = { workspace = true, features = ["macros", "time", "parking_lot"] }
time-source = { workspace = true }
derive-new = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
time-source = { workspace = true, features = ['mock'] }
sp-consensus-slots = { workspace = true, features = ["std"] }

[features]
default = []
