[package]
name = "sidechain-block-search"
version.workspace = true
license = "Apache-2.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
sp-runtime = { workspace = true, features = ['std'] }
sp-api = { workspace = true, features = ['std'] }
sp-blockchain = { workspace = true }

sp-sidechain = { workspace = true, features = ['std'] }
sidechain-domain = { workspace = true, features = ['std'] }

[dev-dependencies]
proptest = { workspace = true }
